[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/inventory_menu.gd" id="1"]

[node name="InventoryMenu" type="Control"]
visible = false
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.85

[node name="ItemList" type="ItemList" parent="Panel/HBoxContainer"]
size_flags_horizontal = 3

[node name="Description" type="RichTextLabel" parent="Panel/HBoxContainer"]
size_flags_horizontal = 3
text = "Selecione um item"

[node name="PartyList" type="ItemList" parent="Panel/HBoxContainer"]
size_flags_horizontal = 2

[node name="ButtonRow" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.86
anchor_right = 0.7
anchor_bottom = 0.95

[node name="Use" type="Button" parent="Panel/ButtonRow"]
text = "Usar"

[node name="Close" type="Button" parent="Panel/ButtonRow"]
text = "Fechar"

[connection signal="item_selected" from="Panel/HBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Panel/ButtonRow/Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="Panel/ButtonRow/Close" to="." method="close"]
